    File.  (Alexandre Normand and cutting)

    AVRO-1147. Java: Permit stringable map keys in reflect.
    (Alexandre Normand)

    AVRO-1151. Netty Avro server should expose the number of connections
    currently open. (Hari Shreedharan via tomwhite)

    AVRO-1149. Java: Add a constructor to generated classes with all
    fields as parameters. (Gabriel Reid via cutting)

  BUG FIXES

    AVRO-1128. Java: Fix SpecificRecordBase#equals() to work for
    records that contain maps.  (cutting)

    AVRO-1131. Generated build makefiles for MSYS/MinGW use Visual
    Studio compiler flags (Laurent Moss via thiru)

    AVRO-1103. Java: Fix SpecificData and mapreduce to use correct
    classloader. (cutting)

    AVRO-1135. Avro C++ fails to build on Mac. (thiru)

    AVRO-1140. Buffer.hh includes Config.hh without "../" (Jan van der Lugt via thiru)

    AVRO-1141. Avro data files are created without O_TRUNC (Martin Nagy via thiru)

    AVRO-1143. avrogencpp generates $Undefined$ for some union types (thiru)

    AVRO-1152. Java: Fix TestTraceSingletons for Java 7. (cutting)

    AVRO-1111. Malformed data can cause OutOfMemoryError in Avro IPC.
    (Mike Percy via tomwhite)

    AVRO-1155. Stringable Date test in TestReflect fails if timezone doesn't
    match locale's default. Removed Date from built-in stringables. (tomwhite)

    AVRO-851. Java: Fix a bug in GenericData#toString() when escaping
    characters. (Jeff Mesnil via cutting)

    AVRO-1154. Java: Fix NettyTransciever to not hang when the server
    is stopped. (Karel Vervaeke & Bruno Dumon via cutting)

Avro 1.7.1 (16 July 2012)

  NEW FEATURES

    AVRO-1106. Java: Add AvroMultipleOutputs for newer mapreduce API.
    (Ashish Nagavaram via cutting)

    AVRO-1112. Java: Add support for Snappy codec to newer mapreduce API.
    (Matt Mead via cutting)

    AVRO-1108. Java: Add support for reflect API to newer mapreduce API.
    (cutting)

    AVRO-1104. C: avroappend utility. (Lucas Martin-King via dcreager)
